✨ Get project route
